[package]
name = "delaunay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "delaunay"

[dependencies]
ggez = "0.9.3"
serde = { version = "1.0.192", features = ["derive"] }
rand = "0.8.5"
